--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,17 @@
 <IfModule mod_headers.c>
 Header set Access-Control-Allow-Origin "*"
-Header set Access-Control-Allow-Methods "GET"
+Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
 Header set Access-Control-Allow-Headers "Content-Type"
 </IfModule>
 
 RewriteEngine On
+RewriteBase /quran-indo.pesonanirwanawaterpark.com/public/
+
+# Redirect semua permintaan ke /home jika tidak ada path lainnya
+RewriteCond %{REQUEST_URI} ^/$
+RewriteRule ^$ /home [R=301,L]
+
+# Redirect semua permintaan ke index.php (untuk routing custom)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?url=$1 [QSA,Ls]
+RewriteRule ^(.*)$ index.php [QSA,L]
